# pychatcat

./: PROJECT_STRUCTURE.md  README.md  build_exe.bat  check_exe_cloud_feature.py  cloud_integration.py  diagnose_cloud_connection_local.py  diagnose_data_collection.py  main.py  pychatcat.spec  pyproject.toml  query_database.py  requirements.txt  run_app.py  test_data_collection.py  upload_to_github.ps1  verify_exe_features.py  view_interactions_detail.py
backend/: app.py  diagnose_cloud_connection.py  requirements.txt  view_data.py
config/: __init__.py  backend_config.py
core/: __init__.py  analytics_tracker.py  code_executor.py  deepseek_client.py  file_manager.py  placeholder.txt  sqlite_analytics.py  student_id_manager.py  user_identity.py
docs/: EXE云端上报功能缺失问题.md  EXE功能验证指南.md  EXE日志文件位置说明.md  Flask后端运行状态检查.md  GitHub上传指南.md  SQLite数据分析系统说明.md  上传文件到宝塔服务器.md  云端数据上报问题排查.md  代码修改说明_云端连接修复.md  使用指南.txt  功能测试指南.md  如何查看学生行为数据.md  如何查看桌面应用日志.md  学号管理说明.md  学生数据采集方案.md  快速操作总览.md  技术方案总结.md  排查行为数据未上传问题.md  数据分析方案.md  数据采集功能完全未启用问题.md  数据采集功能完整说明.md  数据采集扩展实施指南.md  文档索引.md  最终版本说明.txt  桌面应用云端上报检查清单.md  桌面应用打包EXE流程.md  部署指南_腾讯云宝塔.md  项目说明.md
examples/: basic_python_examples.py
integrations/: analytics_integration.py  sqlite_integration.py
scripts/: organize_project.py  simple_test.py  start_analytics_system.py  start_sqlite_system.py  test_sqlite_system.py
ui/: __init__.py  debugger_panel.py  pixel_ai_assistant.py  pixel_code_editor.py  pixel_console.py
