[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pychatcat-assistant"
version = "0.1.0"
description = "Python 学习助手桌面应用（Tkinter 客户端）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PyChatCat", email = "maintainer@example.com" }]
keywords = ["education", "python", "assistant", "tkinter"]
dependencies = [
  "Pillow>=8.0.0",
  "Flask>=2.3.0",
  "Flask-CORS>=4.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "openai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/yourname/pychatcat"

# 安装后提供一个命令：pychatcat
[project.scripts]
pychatcat = "run_app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs*", "scripts*", "tests*"]





